2/22/16 9:48 PM: Start code and classes created
2/23/16 2:03 AM: Added variables to Player and Enemy classes
2/23/16 3:30 PM: Reuploaded the files, hopefully it works correctly this time.
2/23/16 4:23 PM: Added basic values to player variables, Loaded in a temporary grid to test movement, and loaded a temporary player texture