@@ -2,3 +2,4 @@
 2/23/16 2:03 AM: Added variables to Player and Enemy classes
 2/23/16 3:30 PM: Reuploaded the files, hopefully it works correctly this time.
 2/23/16 4:23 PM: Added basic values to player variables, Loaded in a temporary grid to test movement, and loaded a temporary player texture
+2/24/16 3:28 AM: Loading texture for the player is now done in Player.cs, set up basic framework for Level() method in Player.cs
